# kuri

./: .gitignore  .pre-commit-config.yaml  PHASES.md  README.md  justfile  pyproject.toml
.github/workflows/: papertrading-daily.yml
configs/: calendar.yaml  features.yaml  pipeline.yaml  universe.yaml
dashboard/: __init__.py  app.py  data.json  ew_nifty49_history.csv  formatting.py  nifty50_history.csv  requirements.txt
docs/adr/: 0001-papertrading-state-persistence.md  0002-papertrading-runtime-data-persistence.md
docs/runbooks/: 0001-cloudflare-r2-setup.md  0002-r2-runtime-data-initial-upload.md  0003-streamlit-community-cloud-deploy.md
reports/: lgbm_v1_vs_v2_comparison.json
reports/backtest_v2/: SUMMARY.md  concentration_audit.md  frozen_fold_comparison.md  full_report.json  primary_headline.md  regime_breakdown.json  regime_breakdown.md  sensitivity.json  sensitivity.md  spot_check_2024-06-18.txt
reports/backtest_v2/frozen_fold_0/: headline.md  portfolio_history.csv  rebalance_log.csv  trade_log.csv
reports/papertrading/: backfill_verification.md
scripts/: aggregate_lgbm_full.py  backfill_papertrading.py  backtest_concentration_audit.py  backtest_frozen_fold.py  backtest_spot_check.py  compare_v1_vs_v2.py  fold_failure_analysis.py  run_lgbm_full.sh  run_lgbm_preview.sh  univariate_ic.py  verify_backfill_parity.py
src/trading/: __init__.py  cli.py  config.py  logging.py
src/trading/backtest/: __init__.py  costs.py  data.py  engine.py  metrics.py  portfolio.py  report.py  slippage.py  types.py  walk_forward_sim.py
src/trading/calendar/: __init__.py  sessions.py
src/trading/dashboard/: __init__.py  build_data.py
src/trading/data/: __init__.py  fetcher.py  flows.py  index.py  ohlcv.py  universe.py
src/trading/features/: __init__.py  config.py  cross_sectional.py  interactions.py  microstructure.py  momentum.py  (+9 more)
tests/: _features_helpers.py  conftest.py  test_backfill_papertrading.py  test_backtest_costs.py  test_backtest_data.py  test_backtest_engine_no_skill.py  test_backtest_engine_rebalance.py  test_backtest_engine_skeleton.py  test_backtest_engine_synthetic.py  test_backtest_fold_router.py  test_backtest_metrics.py  test_backtest_metrics_composite.py  test_backtest_plots.py  test_backtest_portfolio.py  test_backtest_regime.py  test_backtest_slippage.py  test_backtest_stitched_predictions.py  test_calendar.py  test_cli_papertrading_run.py  test_config.py  test_dashboard_app_helpers.py  test_dashboard_build_data.py  test_features_cross_sectional.py  test_features_interactions.py  test_features_microstructure.py  test_features_momentum.py  test_features_persistence.py  test_features_pipeline.py  test_features_price.py  test_features_regime.py  test_features_trend.py  test_features_volatility.py  test_features_volume.py  test_features_yaml.py  test_fetcher.py  test_flows.py  test_labels_forward_returns.py  test_labels_store.py  test_logging.py  test_models_base.py  (+18 more)
(+27 files in other folders)
